[gd_scene load_steps=11 format=3 uid="uid://dun1cpardk2xw"]

[ext_resource type="Script" uid="uid://2aogeww6mxlj" path="res://Scenes/game.gd" id="1_eua6o"]
[ext_resource type="PackedScene" uid="uid://bigv70jqf6d8p" path="res://Scenes/player/dark_oracle.tscn" id="2_dfjrj"]
[ext_resource type="StyleBox" uid="uid://rjmty1saw2qr" path="res://assets/play_again_button_pressed.tres" id="3_twsm8"]
[ext_resource type="Script" uid="uid://ydqki8iy5iw8" path="res://UI/header.gd" id="4_qxpe7"]
[ext_resource type="PackedScene" uid="uid://ymcfig6q58q3" path="res://pinetree.tscn" id="5_v0jmy"]
[ext_resource type="PackedScene" uid="uid://c0mo8axus5q67" path="res://Scenes/powerups/powerup.tscn" id="6_dfjrj"]

[sub_resource type="Curve2D" id="Curve2D_cp6e5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1055, -697, 0, 0, 0, 0, 1057, -697, 0, 0, 0, 0, 1057, 671, 0, 0, 0, 0, -1055, 663, 0, 0, 0, 0, -1055, -689)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l26od"]
bg_color = Color(0.188235, 0.188235, 0.188235, 0.619608)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_eua6o"]
normal = Vector2(0.999999, -0.00140056)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dfjrj"]

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_eua6o")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Background" type="ColorRect" parent="."]
z_index = -5
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -495.0
offset_top = -505.0
offset_right = 2425.0
offset_bottom = 1575.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(0.623529, 0.866667, 0.317647, 1)

[node name="Background2" type="ColorRect" parent="."]
z_index = -6
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -966.0
offset_top = -1000.0
offset_right = 2954.0
offset_bottom = 2080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(0.381145, 0.539257, 0.180628, 1)

[node name="Player" parent="." instance=ExtResource("2_dfjrj")]
position = Vector2(960, 540)
collision_layer = 5
collision_mask = 5

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_cp6e5")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1055, -697)

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.439216)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.5
offset_top = -85.0
offset_right = 336.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOver/ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.698039, 0.937255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.47451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 124
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameOver/ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.698039, 0.937255, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/pressed = ExtResource("3_twsm8")
theme_override_styles/normal = ExtResource("3_twsm8")
text = "Play Again?"

[node name="Grass" type="CanvasLayer" parent="."]
layer = -32
visible = false

[node name="ColorRect" type="ColorRect" parent="Grass"]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.623529, 0.866667, 0.317647, 1)

[node name="HUD" type="CanvasLayer" parent="."]
layer = 100

[node name="Header" type="PanelContainer" parent="HUD"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 63.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_l26od")
script = ExtResource("4_qxpe7")

[node name="MarginContainer" type="MarginContainer" parent="HUD/Header"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Header/MarginContainer"]
layout_mode = 2

[node name="PowerUps" type="Label" parent="HUD/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ITEMS GO HERE"

[node name="Spacer" type="Control" parent="HUD/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="XP" type="Label" parent="HUD/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "XP: 1200"

[node name="Spacer2" type="Control" parent="HUD/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Score_Label" type="Label" parent="HUD/Header/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 100"
horizontal_alignment = 2

[node name="Powerup" parent="." instance=ExtResource("6_dfjrj")]
position = Vector2(433, 349)
collision_layer = 4
collision_mask = 4

[node name="LeftBoundary" type="StaticBody2D" parent="."]
position = Vector2(-5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBoundary"]
position = Vector2(-500, 540)
shape = SubResource("WorldBoundaryShape2D_eua6o")

[node name="RightBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBoundary"]
position = Vector2(2420, 540)
rotation = 3.13763
shape = SubResource("WorldBoundaryShape2D_eua6o")

[node name="BottomBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBoundary"]
position = Vector2(960, 1580)
rotation = -6.28319
shape = SubResource("WorldBoundaryShape2D_dfjrj")

[node name="TopBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBoundary"]
position = Vector2(960, -500)
rotation = 1.57961
shape = SubResource("WorldBoundaryShape2D_eua6o")

[node name="PineTree" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(2213, -749)

[node name="PineTree2" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(2714, -603)

[node name="PineTree3" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(-379, 1701)

[node name="PineTree4" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(524, 1888)

[node name="PineTree5" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(1428, 1766)

[node name="PineTree6" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(2559, 1131)

[node name="PineTree7" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(-697, -863)

[node name="PineTree8" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(-746, -456)

[node name="PineTree9" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(-827, 138)

[node name="PineTree10" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(-843, 903)

[node name="PineTree11" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(-762, 1522)

[node name="PineTree12" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(2152, 1726)

[node name="PineTree13" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(2665, 1856)

[node name="PineTree14" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(-184, -871)

[node name="PineTree15" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(565, -896)

[node name="PineTree16" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(1558, -847)

[node name="PineTree17" parent="." instance=ExtResource("5_v0jmy")]
position = Vector2(882, -944)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="button_down" from="GameOver/ColorRect/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_button_down"]
[connection signal="button_up" from="GameOver/ColorRect/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_button_up"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
